# tailscale-router

./: Cargo.toml  README.md  flake.nix  tailscale-router.service
src/: config.rs  main.rs
