[package]
name = "tailscale-router"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
futures-util = "0.3.31"
log = "0.4.27"
rtnetlink = "0.17.0"
sd-notify = "0.4.5"
serde = "1.0.219"
serde_derive = "1.0.219"
systemd = "0.10.0"
tokio = { version = "1.46.1", features = ["full"] }
toml = "0.9.2"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
